fixed overflow

--- a/bc/styles/styles.css
+++ b/bc/styles/styles.css
@@ -1,3 +1,4 @@
+
 #content-area{
     width: 100%;
     height: 100%;
@@ -7,7 +8,7 @@
     width: 100%;
     height: 93vh;
     overflow-block: clip;
-        background-color: black;
+    background-color: black;
     z-index: 0;
 }
 
@@ -57,4 +58,5 @@
 #information{
     width: 100%;
     height: 100vh;
+    position: relative;
 }
